--- a/web/ReactNativeSwap/app/i18n/languages/en.json
+++ b/web/ReactNativeSwap/app/i18n/languages/en.json
@@ -247,5 +247,52 @@
     "tips": "I have read and agree",
     "privacyPolicy": "Terms of Service",
     "serviceAgreement": " Privacy Policy"
+  },
+  "swap": {
+    "add": "Add",
+    "remove": "Remove",
+    "transaction": "Transaction",
+    "transactions": "Transactions",
+    "pair": "Pair",
+    "liquidity": "Liquidity",
+    "market": "Market",
+    "removeLiquidity": "Remove Liquidity",
+    "addLiquidity": "Add Liquidity",
+    "myLiquidity": "My Liquidity",
+    "swap": "Swap",
+    "swaps": "Swaps",
+    "adds": "Adds",
+    "removes": "Removes",
+    "overview": "Overview",
+    "fee": "Fee",
+    "pooledTokens": "Pooled Tokens",
+    "for": "for",
+    "take": "For",
+    "input": "Input",
+    "output": "Output",
+    "maximumSold": "Maximum Sold:",
+    "priceImpact": "Price Impact:",
+    "liquidityProviderFee": "Liquidity Provider Fee:",
+    "price": "Price",
+    "max": "MAX",
+    "select": "select",
+    "willReceive": "I Will Receive",
+    "sharePool": "Share of Pool",
+    "addFirstTip": "you are the first person to add liquidity! \nThe initial exchange rate will be set based on your deposits. Please make sure that the deposit transaction pair has a proper ratio",
+    "addSecondTip": "Output is estimated. If the price changes by more than 0.5% your transaction will revert.",
+    "notFound": "Don't see a pool you want to join?",
+    "createIt": " Create it.",
+    "pooled": "Pooled",
+    "myPoolTokens": "My Pool Tokens",
+    "myPoolShare": "My Pool Share",
+    "more": "More",
+    "and": "and",
+    "poolTokens":"Pool Tokens",
+    "createPool": "Create Pool",
+    "create": "Create",
+    "tokenName": "Token Name:",
+    "totalSupply": "Total Supply:",
+    "circulatingSupply": "Circulating Supply:",
+    "pleaseSelect": "Please Select"
   }
 }
