--- a/web/ReactNativeSwap/app/i18n/languages/zh_cn.json
+++ b/web/ReactNativeSwap/app/i18n/languages/zh_cn.json
@@ -247,5 +247,52 @@
     "tips": "我已阅读并同意",
     "privacyPolicy": "《用户隐私政策》",
     "serviceAgreement": "《用户服务协议》"
+  },
+  "swap": {
+    "add": "添加",
+    "remove": "移除",
+    "transaction": "交易",
+    "transactions": "交易记录",
+    "pair": "交易对",
+    "liquidity": "流动性",
+    "market": "市场",
+    "removeLiquidity": "移除流动性",
+    "addLiquidity": "添加流动性",
+    "myLiquidity": "我的流动性",
+    "swap": "兑换",
+    "swaps": "兑换",
+    "adds": "添加流动性",
+    "removes": "移除流动性",
+    "overview": "概况",
+    "fee": "交易费",
+    "pooledTokens": "流动池Token",
+    "for": "为",
+    "take": "取出",
+    "input": "存入",
+    "output": "取出",
+    "maximumSold": "存入最大值:",
+    "priceImpact": "交易滑点:",
+    "liquidityProviderFee": "交易费:",
+    "price": "价格",
+    "max": "最大",
+    "select": "选择",
+    "willReceive": "流动性变化",
+    "sharePool": "流动性占比",
+    "addFirstTip": "该流动性将首次添加流动性！\n交易对的初始汇率将根据存入的Token比例确定，请确保存入的交易对具有合适比例。",
+    "addSecondTip": "所有输入数值仅为当前预估值，如果价格变动幅度超过0.5%，该交易将被取消。",
+    "notFound": "没有找到要加入的流动池?",
+    "createIt": " 创建流动性",
+    "pooled": "流动池",
+    "myPoolTokens": "流动性Token",
+    "myPoolShare": "流动性占比",
+    "more": "更多",
+    "and": "和",
+    "poolTokens":"流动性Token",
+    "createPool": "创建流动池",
+    "create": "创建",
+    "tokenName": "Token名称:",
+    "totalSupply": "总供应链:",
+    "circulatingSupply": "总流通量:",
+    "pleaseSelect": "请选择"
   }
 }
