--- a/web/ReactNativeSwap/app/i18n/languages/en.json
+++ b/web/ReactNativeSwap/app/i18n/languages/en.json
@@ -310,6 +310,8 @@
     "close": "close",
     "lowest": "lowest",
     "highest": "highest",
-    "volume": "Volume"
+    "volume": "Volume",
+    "totalValue": "Total Value",
+    "TXS": "Transactions"
   }
 }
