feat: 🎸 UI change

--- a/web/ReactNativeSwap/app/i18n/languages/en.json
+++ b/web/ReactNativeSwap/app/i18n/languages/en.json
@@ -309,6 +309,7 @@
     "open": "open",
     "close": "close",
     "lowest": "lowest",
-    "highest": "highest"
+    "highest": "highest",
+    "decimalTip": "(Only supports {{decimals}} decimals)"
   }
 }
