perf: ⚡️ Change the display title

--- a/web/ReactNativeSwap/app/i18n/languages/zh_cn.json
+++ b/web/ReactNativeSwap/app/i18n/languages/zh_cn.json
@@ -320,7 +320,11 @@
       "totalSwapped": "Total Value Swapped",
       "feePaid": "Total Fees Paid",
       "txsCount": "Total Transactions",
-      "liquidityInPrice": "Liquidity (Including Fees)"
+      "liquidityInPrice": "Liquidity (Including Fees)",
+      "pairList": "Pair List"
+    },
+    "token": {
+      "topPairs": "Top Pairs"
     }
   }
 }
