--- a/web/ReactNativeSwap/app/i18n/languages/zh_cn.json
+++ b/web/ReactNativeSwap/app/i18n/languages/zh_cn.json
@@ -325,6 +325,12 @@
     },
     "token": {
       "topPairs": "Top Pairs"
+    },
+    "transactionPop": {
+      "transactionSubmitted": "Transaction Submitted",
+      "txId": "TxId",
+      "explorer": "View on aelf Block Explorer",
+      "OK": "OK"
     }
   }
 }
