--- a/web/ReactNativeSwap/app/i18n/languages/zh_cn.json
+++ b/web/ReactNativeSwap/app/i18n/languages/zh_cn.json
@@ -301,7 +301,7 @@
     "pairExists": "交易对已存在",
     "inputError": "输入有误",
     "insufficientLiquidity": "流动资金不足",
-    "minimumReceived": "最低收到",
+    "minimumReceived": "最低收到:",
     "createdSuccess": "创建成功",
     "addSuccess": "添加成功",
     "swapSuccess": "兑换成功",
