--- a/web/ReactNativeSwap/app/i18n/languages/zh_cn.json
+++ b/web/ReactNativeSwap/app/i18n/languages/zh_cn.json
@@ -66,7 +66,11 @@
     },
     "advancedLogin": {
       "title": "高级账户登录",
-      "PrivateKey": "私钥"
+      "PrivateKey": "私钥",
+      "Mnemonic": "助记词",
+      "PrivateKeyTip": "请输入正确的私钥",
+      "KeyStore": "KeyStore或密码错误",
+      "MnemonicTip": "请输入正确的助记词"
     },
     "enterPassword": {
       "title": "输入密码",
@@ -166,7 +170,7 @@
     "personalCenter": {
       "title": "个人中心",
       "qRCodeTip": "此二维码是您的账户，丢失二维码等同于丢失账户，您的资产将无法找回，请务必妥善保管您的二维码账户",
-      "premiumAccount": "高级账户",
+      "advancedAccount": "高级账户",
       "authentication": "身份认证",
       "notCompleted": "未完善",
       "authenticationTip": "完成身份信息认证，可获得以下权限：\n* 可进行单笔高于2,000 CNY或累积金额大于10,000 CNY的法币交易",
@@ -211,6 +215,19 @@
       "to": "至",
       "transactionDetails": "交易详情",
       "transferSelfTip": "无法给自己转账"
+    },
+    "AdvancedAccount": {
+      "Export": "导出{{type}}",
+      "PrivateKey": "私钥",
+      "Mnemonic": "助记词",
+      "Copy": "复制{{type}}",
+      "Description": "{{type}}说明",
+      "PrivateKeyExplanation": "获取私钥等于拥有账号资产所有权，如果你的手机丢失、被盗、损坏，私钥可以恢复你的财产。",
+      "KeystoreExplanation": "获取Keystore与账号密码等于拥有账号资产所有权，如果你的手机丢失、被盗、损坏，Keystore与账号密码可以恢复你的财产。",
+      "MnemonicExplanation": "获取私钥等于拥有账号资产所有权，如果你的手机丢失、被盗、损坏，私钥可以恢复你的财产。",
+      "MnemonicEmptyTip": "该账户没有助记词",
+      "OfflineStorage": "离线保管",
+      "OfflineExplanation": "妥善保管至隔离网络的安全地方;\n请勿将{{type}}在联网环境下分享和存储，比如邮件、相册、社交应用等。"
     }
   },
   "permission": {
